# cloudwatch_alarm_to_slack

./: .coveragerc  .gitignore  .pyup.yml  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
cloudwatch_alarm_to_slack/: notifier.py
cloudwatch_alarm_to_slack/errors/: __init__.py
cloudwatch_alarm_to_slack/events/: cloudwatch.py  slack.py
cloudwatch_alarm_to_slack/models/: cloudwatch.py
cloudwatch_alarm_to_slack/templates/: slack.py
tests/: conftest.py  test_notifier.py
tests/events/: test_slack_event.py
