[metadata]
name = cloudwatch_alarm_to_slack
version = attr: cloudwatch_alarm_to_slack.version
description = Cloudwatch Alarm to SNS to Slack
long_description = See README.md in the repository
long_description_content_type = text/plain
url = https://github.com/jpdhas/cloudwatch_alarm_to_slack

[options]
packages = find:
install_requires =
  slack_sdk
  pydantic

[flake8]
max_line_length = 120
exclude = docs


# install flake8-docstrings
docstring_convention = google

# install flake8-sfs
extend_ignore=SFS3,D107,SFS301

[isort]
src_paths=cloudwatch_alarm_to_slack
